--- a/buzz.html
+++ b/buzz.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="5;url=https://whittle-shenzhen.buzz-china.cn/">
+<meta http-equiv="refresh" content="url=https://whittle-shenzhen.buzz-china.cn/">
