--- a/buzz.html
+++ b/buzz.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="url=https://whittle-shenzhen.buzz-china.cn/">
+<meta http-equiv="refresh" content="0;url=https://whittle-shenzhen.buzz-china.cn/">
 <head><title>Buzz</title></head>
