--- a/9bschedule.html
+++ b/9bschedule.html
@@ -1,2 +1,2 @@
 <meta http-equiv="refresh" content="0;url=webcal://p48-caldav.icloud.com/published/2/MTY0OTk2NzMyNTQxNjQ5OVrNMx1SLY8aGlGZI8Xzoxbqjt7BV1qyH9ny_t5m5IVETDxKLqm5xlfQM81TYqBPHwfICAr_ENm_49JJt1W2Hf4">
-<head><title>Buzz</title></head>
+<head><title>9B Schedule</title></head>
