--- a/yu/index.html
+++ b/yu/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://i15.app/assets/css/style.css?v=f5d06e551572d2f8c10e1185a58a7adbbc57e81f">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
