--- a/song/index.html
+++ b/song/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <script src="ink.js"></script>
-    <script src="song.js"></script>
+    <script src="宋人一日final.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
