--- a/dt-portfolio.html
+++ b/dt-portfolio.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="url=https://example.com">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5;url=https://example.com">
+    <title>Redirecting...</title>
+</head>
+<body>
+</body>
+</html>
