--- a/dt-portfolio.html
+++ b/dt-portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=https://example.com">
+    <meta http-equiv="refresh" content="0;url=https://sway.cloud.microsoft/s5FnxG1Eu0RYbuZW?ref=Link&loc=mysways">
     <title>Redirecting...</title>
 </head>
 <body>
